fixed sidebar header sizes on small viewports, made CV animation only play on initial viewing

--- a/src/CV.module.css
+++ b/src/CV.module.css
@@ -122,8 +122,7 @@
 }
 
 .SideBarGroup h3 {
-	font-size: 6vmin;
-	text-decoration: underline;
+	text-decoration: underline var(--orange);
 	margin-left: 10px;
 }
 
@@ -282,10 +281,7 @@
 	.Page footer a {
 		font-size: 3.3vmin;
 	}
-}
- 
-@media only screen and (max-width: 600px) {
-	.SectionTitle {
-		top: 50px;
+	.SideBarGroup h3 {
+		font-size: 8vmin;
 	}
 }
